log.txt
Traceback (most recent call last):
  File "./main_driver.py", line 9, in <module>
    import update_settings as us
  File "/home/sohr/Documents/spring_2018_boulder/SRC_EXE_DIR/SOHR/projects/catalytic_cycle/update_settings.py", line 5
    im[int(top_n)]ort os
                    ^
SyntaxError: invalid syntax
